# RAG-against-the-machine

./: .envrc  .flake8  .gitignore  Makefile  README.md  pyproject.toml
data/: README.md  test.py
data/datasets/private/AnsweredQuestions/: dataset_code_private.json  dataset_docs_private.json
data/datasets/private/UnansweredQuestions/: dataset_code_private.json  dataset_docs_private.json
data/moulinette_pkg/: README.md
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/chunks/: metadata.json
data/tests/: test.md  test.py
exams/: exam_scripts_instructions.md
exams/scripts/: exam_answer.sh  exam_edge_cases.sh  exam_retrieval.sh
src/: __main__.py
src/chunkers/: __init__.py  python_chunker.py  text_chunker.py
src/evaluation/: __init__.py  evaluator.py
src/generation/: __init__.py  generator.py
src/ingestion/: __init__.py  chunker.py  indexer.py
src/models/: __init__.py  schemas.py
src/parsers/: __init__.py  file_parser.py
src/retrieval/: __init__.py  retriever.py
src/student.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: utils.py
student/: __main__.py
student/evaluation/: __init__.py  evaluator.py
student/generation/: __init__.py  generator.py
student/ingestion/: __init__.py  chunker.py  indexer.py  parser.py
student/models/: __init__.py  schemas.py
student/retrieval/: __init__.py  retriever.py
student/utils/: __init__.py  utils.py
