[project]
name = "rag-against-the-machine"
version = "0.0.1"
description = "RAG project at 42"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66.0",
    "fire>=0.6.0",
    "langchain>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "bm25s>=0.1.10",
    "pydantic>=2.8.2",
    "rich>=13.8.1",
    "llama-cpp-python>=0.2.0",
    "PyStemmer>=3.0.0"
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "types-requests>=2.33.0.20260408",
    "types-setuptools>=82.0.0.20260408",
    "types-docopt>=0.6.11",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
student = "src"